# BantamWestEssenSpielPhotoBooth

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_README.md  Dockerfile  Dockerfile.dev  Dockerfile.photobooth  IMAGE_REQUIREMENTS.md  IMPROVEMENTS.md  PRINTER_SETUP.md  README-DEVELOPMENT.md  README.md  SYSTEM_REQUIREMENTS.md  build.rs  canon_250d_diagnostic.sh  canon_250d_settings_check.sh  check_setup.sh  configure_printer_4x6.sh  curl_commands.md  debug_print.sh  deploy.sh  dev.sh  diff.txt  docker-compose.dev.yml  fix_canon_busy.sh  fix_db_permissions.sh  fix_v4l2_device.sh  photo-booth.service  printer_utils.sh  setup_host.sh  setup_packages.sh  setup_printer.sh  simple_settings_check.sh  test_endpoints.sh  test_v4l2_loopback.sh
docs/: CONSOLIDATION_COMPLETE.md  SCRIPT_CONSOLIDATION_PLAN.md
html/: choice.html  class.html  companion.html  copies.html  debug_test.html  email_entry.html  enter_names.html  index.html  land.html  photo.html  start.html  thank_you.html  wanted_poster_wall.html  weapon.html
migrations/: 001_init.sql  002_create_session_table.sql
operations/: README.md  photobooth-kiosk.service  run-kiosk.sh  setup-kiosk.sh  start-kiosk.sh  stop-kiosk.sh
refactoring_tasks/: 00_REFACTORING_SUMMARY.txt  01_platform_specific_code.txt  01_platform_specific_code_REVISED.txt  02_image_processing_cleanup.txt  03_error_handling_consolidation.txt  04_session_management_optimization.txt  05_route_handler_separation.txt  06_configuration_improvements.txt  07_template_module_simplification.txt  08_camera_stream_optimization.txt  (+1 more)
scripts/: install_fonts.sh  (+6 more)
(+19 files in other folders)
