[package]
name = "canon_test_cam"
version = "0.1.0"
edition = "2021"

[lib]
name = "canon_test_cam"
path = "src/lib.rs"

[[bin]]
name = "canon_test_cam"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.11.0", features = ["macros"] }
async-stream = "0.3.6"
async-trait = "0.1.83"
bytes = "1.10.1"
chrono = "0.4.41"
printers = { version = "2.1.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "process",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
actix-embed = "0.1.0"
rust-embed = "8"
futures = "0.3.31"

[features]
default = ["printer-cups"]
printer-cups = ["printers"]

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"
image = { version = "0.24", features = ["jpeg"] }
imageproc = "0.23"
rusttype = "0.9"
gphoto2 = "3"
